tooling/nargo_cli/tests/snapshots/execution_success/xor/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u32, y: pub u32) {
    let m: u32 = x ^ y;
    assert(m != 10);
}
